[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "m4rkw-tracing"
version = "VERSION"
description = "pytho tracing"
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "python-pushover2",
    "requests",
    "requests[socks]",
    "PySocks",
    "PyYAML",
]

[tool.setuptools]
packages = ["tracing"]
